Spacing fix on footer

--- a/shopify/assets/fps.css
+++ b/shopify/assets/fps.css
@@ -1116,6 +1116,9 @@ form.oneline-form {
 	font-size: 1.2em;
 	margin-top: 0.4em;
 }
+#main-footer .newsletter-prompt h2 {
+	margin-top: 0.7em;
+}
 #footer-cols {
 	display: flex;
 	justify-content: space-between;
